# kilnwatch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/steering/: product.md  structure.md  tech.md
config/: settings.example.toml
deploy/: README.md  kilnwatch.service
kilnwatch/: main.py
kilnwatch/hardware/: gpio_config.py  thermocouple.py
kilnwatch/scheduler/: sampler.py
kilnwatch/utils/: config.py  logging_setup.py
kilnwatch/web/: app.py  auth.py
kilnwatch/web/routes/: config.py  dashboard.py  history.py  programs.py
scripts/: export_session.py  init_db.py  simulate_tc.py
